# RI_project

./: README.md
ribot_controller/: CMakeLists.txt  package.xml
ribot_controller/config/: ribot_controllers.yaml
ribot_controller/launch/: controller.launch.py  slider_controller.launch.py
ribot_controller/ribot_controller/: slider_control.py
ribot_controller/src/: slider_control.cpp
ribot_description/: CMakeLists.txt  package.xml
ribot_description/launch/: display_ribot.launch.py  gazebo.launch.py
ribot_description/meshes/: gripper_dummy.stl  link2.stl  link3.stl  link5.stl  right_gripper.stl
ribot_description/rviz/: display.rviz  ribot.rviz
ribot_description/urdf/: ribot.urdf  ribot.urdf.xacro  ribot_gazebo.urdf  ribot_gazebo.xacro  ribot_ros2_control.xacro
ribot_gazebo/: CMakeLists.txt  package.xml
ribot_gazebo/launch/: ribot_gazebo.launch.py
ribot_moveit/: CMakeLists.txt  package.xml
ribot_moveit/config/: joint_limits.yaml  moveit_controllers.yaml  ribot.srdf
ribot_moveit/launch/: moveit.launch.py
