<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ribot_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo package for ribot robot simulation</description>
  <maintainer email="kmingi98@gmail.com">mk</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>ribot_description</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ribot_description</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
